Squashed commit of the following:
commit 5e1edca8440459b04c45b56432928d199c4d67d7
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 17:45:38 2025 -0600

    add departure sorting

commit 2966a0604be62708a3b5431f352cc35cffe2c267
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 11:56:18 2025 -0600

    fix quadtree logic and verify results

commit f741595445678e8512cf007382485f8de8a5083f
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 11:26:23 2025 -0600

    docker-ignore

commit 5e1aa022b92ba4565eb900c79ebfcc92d1edeb4d
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 11:23:03 2025 -0600

    remove v1 hallucination and fix validation

commit 140a774a0cf1b8e73e41f93fece74649919365dc
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 11:13:06 2025 -0600

    add api docs and make fields optional

commit aa0e547f6dd18e7ef10ee58cfbc869fa581524b8
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 10:57:57 2025 -0600

    put neraby under stations

commit 0bc8f3fd7a1e0f68d489784df655f947899bc7f8
Author: Price <price.comstock@gmail.com>
Date:   Sat Nov 8 10:50:55 2025 -0600

    add api key and nearby
